# actix-cli-basic-example

./: Cargo.toml
src/: main.rs
src/maluco_cli/: mod.rs
src/maluco_cli/database/: mod.rs
src/maluco_cli/model/: maluco_cli.rs  mod.rs
src/maluco_cli_web/: mod.rs  routes.rs
src/maluco_cli_web/controllers/: crud.rs  mod.rs
