[package]
name = "maluco-cli"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
num_cpus = "1.0"
log = "0.4.11"
env_logger = "0.8.2"
uuid = "0.8.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.104"
fort = "0.4"
bastion = "0.4.3"
